crates/kube-ext/tests/snapshots/projections__configmap_immutable_detail.snap
---
source: crates/kube-ext/tests/projections.rs
assertion_line: 39
expression: value
---
{
  "data": [
    {
      "binary": false,
      "key": "version",
      "size": 6,
      "value": "v1.2.3"
    }
  ],
  "immutable": true,
  "meta": {
    "annotations": [],
    "controlled_by": null,
    "created_at": "2026-03-01T12:00:00Z",
    "generation": null,
    "labels": [],
    "managers": [],
    "name": "frozen",
    "namespace": "default",
    "uid": "cm-frozen-uid"
  }
}
