crates/kube-ext/tests/snapshots/projections__configmap_row.snap
---
source: crates/kube-ext/tests/projections.rs
expression: value
---
{
  "creation_timestamp": "2026-03-01T12:00:00Z",
  "keys": 3,
  "name": "app-config",
  "namespace": "default"
}
