crates/kube-ext/tests/snapshots/projections__deployment_row.snap
---
source: crates/kube-ext/tests/projections.rs
expression: value
---
{
  "available": 4,
  "creation_timestamp": "2026-02-10T08:30:00Z",
  "name": "web",
  "namespace": "default",
  "pods": 5,
  "ready": "4/5",
  "up_to_date": 5
}
